Update the set of scripts
Signed-off-by: Toussaint Nicolas <nicolas1.toussaint@orange.com>

--- a/conf/deploy.conf.example
+++ b/conf/deploy.conf.example
@@ -6,6 +6,7 @@ fossology_environment=production
 #######################################
 # General configuration
 default_docker_image="registry.fqdn/fossology:latest"
+docker_compose_download_url="https://github.com/fossology/fossology/raw/master/docker-compose.yml"
 
 #######################################
 # General configuration
